--- a/app/package.json
+++ b/app/package.json
@@ -121,6 +121,7 @@
     "@types/react": "^16.8.1",
     "@types/react-select": "^2.0.11",
     "@types/react-test-renderer": "^16.0.3",
+    "nodemon": "^1.11.0",
     "react-test-renderer": "^16.7.0",
     "typescript": "^3.3.1"
   }
