--- a/app/package.json
+++ b/app/package.json
@@ -45,6 +45,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-scripts": "^2.1.3",
     "react-select": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
@@ -55,6 +56,9 @@
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
