--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-named-asset-import": "^0.3.0",
     "babel-preset-react-app": "^7.0.0",
     "bfj": "6.1.1",
+    "big.js": "^5.2.2",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
@@ -120,6 +121,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@types/big.js": "^4.0.5",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.21",
     "@types/react": "^16.8.1",
